<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sedler.weatherapplication.CitySelectActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_town"
        android:id="@+id/firstTownButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/thirdTownButton"
        android:layout_alignStart="@+id/thirdTownButton"
        android:layout_marginBottom="52dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_town"
        android:id="@+id/secondTownButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_town"
        android:id="@+id/thirdTownButton"
        android:layout_above="@+id/fourthTownButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourth_town"
        android:id="@+id/fourthTownButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifth_town"
        android:id="@+id/fifthTownButton"
        android:layout_below="@+id/fourthTownButton"
        android:layout_alignRight="@+id/firstTownButton"
        android:layout_alignEnd="@+id/firstTownButton"
        android:layout_marginTop="29dp" />
</RelativeLayout>
